# PizzaHust

./: .gitignore  DESIGN_BRIEF.md  README.md  models.py
Application/: .env.example  (+14 more)
Application/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
Application/backend/app/: main.py
Application/backend/app/api/: auth.py  cart.py  cart_merge.py  cart_store.py  carts.py  combos.py  config.py  deps.py  errors.py  images.py  kitchen.py  loyalty.py  menu.py  order_history.py  orders.py  serialization.py  webhooks.py
Application/backend/app/api/admin/: bulk_import.py  categories.py  combos.py  customers.py  items.py  option_groups.py  options.py  orders.py  reports.py  settings.py
Application/backend/app/api/kitchen/: __init__.py  actions.py  orders.py  queue_logic.py
Application/backend/app/core/: __init__.py  errors.py
Application/backend/app/domain/: cart_payload.py  combo_slots.py  combos.py  gallery.py  loyalty.py  options.py  order_code.py  order_state.py  pricing.py  service_area.py
Application/backend/app/infra/: config.py  loyalty_service.py  settings_service.py  timezone.py
Application/backend/app/seeds/: catalog_images.py  run.py
Application/backend/app/services/: orders.py
Application/backend/app/tools/: dump_openapi.py
Application/backend/tests/: admin_test_utils.py  auth_test_utils.py  conftest.py  kitchen_test_utils.py  test_admin_categories.py  test_admin_category_presets.py  test_admin_combo_image.py  test_admin_combo_images.py  test_admin_combos.py  test_admin_customers.py  test_admin_item_images.py  test_admin_items.py  test_admin_items_image.py  test_admin_option_groups.py  test_admin_options.py  test_admin_orders_detail.py  test_admin_orders_dispatch.py  test_admin_orders_window.py  test_admin_reports.py  test_admin_settings.py  test_auth_core.py  test_auth_profile_loyalty.py  test_auth_security.py  test_bulk_import.py  test_cart_endpoints.py  test_cart_gc.py  test_cart_merge.py  test_cart_payload.py  test_cart_quote.py  test_cart_quote_combo.py  test_combo_queries.py  test_combo_slot_models.py  test_combo_slots_domain.py  test_combos.py  test_config.py  test_delivery_adapter.py  test_delivery_selector.py  test_delivery_webhook.py  test_gallery.py  test_health.py  (+23 more)
Application/backend/tests/domain/: test_combos.py  test_loyalty.py  test_options.py  test_order_state.py  test_pricing.py  test_service_area.py
Application/backend/tests/smoke/: test_end_to_end.py
(+413 files in other folders)
