[project]
name = "pizzahust-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pymysql>=1.1",
  "cryptography>=42",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "argon2-cffi>=23.1",
  "python-ulid>=2.7",
  "structlog>=24.1",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "starlette>=0.38",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
  "import-linter>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
strict = true
files = ["app/domain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "domain has no IO deps"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["app.api", "app.infra"]

[[tool.importlinter.contracts]]
name = "infra does not import api"
type = "forbidden"
source_modules = ["app.infra"]
forbidden_modules = ["app.api"]
