[project]
name = "pizzahust-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136",
  "uvicorn[standard]>=0.46",
  "sqlalchemy>=2.0",
  "alembic>=1.18",
  "pymysql>=1.1",
  "cryptography>=47",
  "pydantic>=2.13",
  "pydantic-settings>=2.14",
  "argon2-cffi>=25.1",
  "python-ulid>=3.1",
  "structlog>=25.5",
  "httpx>=0.28",
  "itsdangerous>=2.2",
  "starlette>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
  "ruff>=0.15",
  "mypy>=1.20",
  "import-linter>=2.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
strict = true
files = ["app/domain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "domain has no IO deps"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["app.api", "app.infra"]

[[tool.importlinter.contracts]]
name = "infra does not import api"
type = "forbidden"
source_modules = ["app.infra"]
forbidden_modules = ["app.api"]
